--- a/src/Components/Address/AddressDelivery.css
+++ b/src/Components/Address/AddressDelivery.css
@@ -2,6 +2,7 @@
 .AddressDeliveryContainer {
   margin-top: 128px;
   padding: 0 256px;
+  /* Styles for active time selector */
 }
 .AddressDeliveryContainer .typeOfOrder {
   display: flex;
@@ -41,6 +42,26 @@
   color: #ffffff;
   border: none;
   cursor: pointer;
+}
+.AddressDeliveryContainer .timeSelector {
+  padding: 10px;
+  background-color: rgb(239, 239, 239);
+  margin-top: 5px;
+  width: 500px;
+}
+.AddressDeliveryContainer .timeSelector {
+  padding: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+}
+.AddressDeliveryContainer .timeSelector:hover {
+  background-color: #c0c0c0;
+}
+.AddressDeliveryContainer .active {
+  background-color: #00A896;
+  color: white;
+  /* Adjust other styles as needed for an active state */
 }
 
 @media screen and (max-width: 1024px) {
