--- a/src/Components/Address/AddressDelivery.scss
+++ b/src/Components/Address/AddressDelivery.scss
@@ -53,6 +53,30 @@
         }
     }
 
+
+    .timeSelector{
+        padding: 10px;
+        background-color: rgb(239, 239, 239);
+        margin-top: 5px;
+        width: 500px;
+    }
+    .timeSelector {
+        padding: 10px;
+        margin-bottom: 10px;
+        cursor: pointer;
+        border: 1px solid #ccc;
+      }
+      
+      .timeSelector:hover {
+        background-color: #c0c0c0;
+      }
+      
+      /* Styles for active time selector */
+      .active {
+        background-color: $primaryColor;
+        color: white;
+        /* Adjust other styles as needed for an active state */
+      }
     
     
 }
