--- a/src/Components/ProductTiles/ProductTiles.scss
+++ b/src/Components/ProductTiles/ProductTiles.scss
@@ -135,6 +135,140 @@
 @media screen and (max-width:425px) {
   .productTileGridContainer{
     padding: 0 16px;
+
+    .productTileHead{
+      display: flex;
+      justify-content: space-between;
+      font-size: small;
+      
+
+
+      .dropbtn {
+          background-color: $secondaryColor;
+          color: $textColor;
+          border: 1px solid rgb(176, 176, 176);
+          padding: 16px;
+          font-size: 16px;
+          width: 100px;
+          // border: none;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+          height: 30px;
+          font-size: small;
+        }
+        
+        .dropdown {
+          position: relative;
+          display: inline-block;
+
+          a{
+              font-size: map-get($fontSize, small );
+          }
+        }
+        
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+        
+        .dropdown-content a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+        
+        .dropdown-content a:hover {background-color: #f1f1f1}
+        
+        .dropdown:hover .dropdown-content {
+          display: block;
+        }
+        
+        .dropdown:hover .dropbtn {
+          background-color: rgb(223, 223, 223);
+        }
+  }
+
+  .card {
+    background-color: $secondaryColor;
+    color: $textColor;
+    border: 1px solid gainsboro;
+    padding: 5px;
+
+    img{
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+    }
+   
+
+    &:hover{
+        cursor: pointer;
+        scale: 1.03;
+        transition: all 0.2s ;
+    }
+
+    .addToCartBtn{
+        width: 100%;
+        padding: 8px;
+    
+        height: 40px;
+        border: none;
+        background-color: $primaryColor;
+        color: $secondaryColor;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover{
+            // background-color: #006d62;
+            cursor: pointer;
+        }
+
+        .cartIcon{
+            margin-left: 24px;
+            font-size: map-get($fontSize, medium );
+        }
+    }
+
+    .heartDivContainer{
+        background-color: $primaryColor;
+        width: 40px;
+        height: 40px;
+        border-radius: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        left: 350px;
+        bottom:200px;
+        color: $secondaryColor;
+    }
+  }
+    .cards {
+      margin: 0 auto;
+      display: grid;
+      gap: 2px;
+      grid-template-columns: repeat(auto-fit, minmax(150px,1fr));
+      
+      h3{
+        font-size: medium;
+      }
+      h4{
+        font-size: small;
+      }
+      p{
+          margin-top: -20px;
+          font-size: map-get($fontSize, small );
+      }
+  }
     
   }
+
 }
