--- a/src/Components/LoginOtpComp/LoginOtpComp.css
+++ b/src/Components/LoginOtpComp/LoginOtpComp.css
@@ -1,1 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");/*# sourceMappingURL=LoginOtpComp.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+.digit-group input {
+  width: 30px;
+  height: 50px;
+  background-color: "red";
+  border: none;
+  line-height: 50px;
+  text-align: center;
+  font-size: 24px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 200;
+  color: rgb(0, 0, 0);
+  margin: 0 2px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+.digit-group .splitter {
+  padding: 0 5px;
+  color: rgb(0, 0, 0);
+  font-size: 24px;
+}/*# sourceMappingURL=LoginOtpComp.css.map */
