--- a/src/Components/LoginOtpComp/LoginOtpComp.scss
+++ b/src/Components/LoginOtpComp/LoginOtpComp.scss
@@ -1,2 +1,26 @@
 @import '../variables';
 
+
+.digit-group {
+	input {
+		width: 30px;
+		height: 50px;
+		background-color: "red";
+		border: none;
+		line-height: 50px;
+		text-align: center;
+		font-size: 24px;
+		font-family: 'Raleway', sans-serif;
+		font-weight: 200;
+		color: rgb(0, 0, 0);
+		margin: 0 2px;
+        border: 1px solid black;
+        border-radius: 5px;
+	}
+
+	.splitter {
+		padding: 0 5px;
+		color: rgb(0, 0, 0);
+		font-size: 24px;
+	}
+}
