--- a/src/Components/PaymentOptions/PaymentOptions.css
+++ b/src/Components/PaymentOptions/PaymentOptions.css
@@ -4,6 +4,22 @@
   padding: 0 300px;
   margin-bottom: 128px;
 }
+.paymentOtionsContainer .paymentOptionsContainerTabMain {
+  display: flex;
+}
+.paymentOtionsContainer .paymentOptionsContainerTabMain .cartPaymentTabButtons {
+  display: flex;
+  flex-direction: column;
+}
+.paymentOtionsContainer .paymentOptionsContainerTabMain .cartPaymentTabButtons .paymentOptionsButtons {
+  padding: 20px;
+  background-color: rgb(228, 228, 228);
+  border: none;
+  font-size: large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .paymentOtionsContainer .payNowBtn {
   width: 100%;
   padding: 15px;
